objects/copado__User_Story_Data_Commit__c.object
<CustomObject>
    <fields>
        <fullName>Data_Set_Name__c</fullName>
        <formula>copado__Data_Set__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Set Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Name__c</fullName>
        <formula>copado__User_Story__r.Name</formula>
        <label>User Story Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Title__c</fullName>
        <formula>copado__User_Story__r.Concatenate__c</formula>
        <label>User Story Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Commit_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Commit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Commit_Message__c</fullName>
        <label>Commit Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Data_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Set</label>
        <referenceTo>copado__Data_Set__c</referenceTo>
        <relationshipLabel>User Story Data Commits</relationshipLabel>
        <relationshipName>User_Story_Data_Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Execution_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Job</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>User Story Data Commits</relationshipLabel>
        <relationshipName>User_Story_Data_Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <formula>TEXT(copado__Execution_Job__r.copado__Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Data Commits</relationshipLabel>
        <relationshipName>User_Story_Data_Commits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Story Data Commit</label>
    <nameField>
        <displayFormat>USDC-{0000000}</displayFormat>
        <label>User Story Data Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Data Commits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>copado__Prevent_change_Commit_Date</fullName>
        <active>true</active>
        <description>This validation rule prevents the user from changing the Commit Date field once the record has been created.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(copado__Commit_Date__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Commit_Date__c</errorDisplayField>
        <errorMessage>It is not allowed to change the Commit Date once the User Story Data Commit has been created. Please create a new User Story Data Commit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Prevent_change_Commit_Message</fullName>
        <active>true</active>
        <description>This validation rule prevents the user from changing the Commit Message field once the record has been created.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(copado__Commit_Message__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Commit_Message__c</errorDisplayField>
        <errorMessage>It is not allowed to change the Commit Message once the User Story Data Commit has been created. Please create a new User Story Data Commit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Prevent_change_Data_Set</fullName>
        <active>true</active>
        <description>This validation rule prevents the user from changing the Data Set field once the record has been created.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(copado__Data_Set__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Data_Set__c</errorDisplayField>
        <errorMessage>It is not allowed to change the Data Set once the User Story Data Commit has been created. Please create a new User Story Data Commit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Prevent_change_Execution_Job</fullName>
        <active>true</active>
        <description>This validation rule prevents the user from changing the Execution Job field once the record has been created.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(copado__Execution_Job__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Execution_Job__c</errorDisplayField>
        <errorMessage>It is not allowed to change the Execution Job once the User Story Data Commit has been created. Please create a new  User Story Data Commit.</errorMessage>
    </validationRules>
</CustomObject>